# mini_pi_description

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
launch/: gz_spawn.launch.py  mini_pi_model.launch.py  sim_and_rviz.launch.py
meshes/: chassis.dae  wheel.dae
worlds/: empty_world.sdf  maze.dae
xacro/: mini_pi.xacro
xacro/macros/: caster.xacro  chassis.xacro  shapes.xacro  ultrasonic_sensor.xacro  wheel.xacro
xacro/parts/: chassis.xacro  sensors_ultrasonic.xacro  wheels.xacro
